added option to teleport to the previous location

--- a/locale/en/ttt.cfg
+++ b/locale/en/ttt.cfg
@@ -5,6 +5,7 @@ TagToTeleport_teleport-tag=Teleport Tag
 TagToTeleport_teleport-tag=You will be teleported here
 
 [controls]
+TagToTeleport_teleport-to-previous-location=Teleport to previous location
 TagToTeleport_teleport-to-location-0=Teleport to saved location 0
 TagToTeleport_teleport-to-location-1=Teleport to saved location 1
 TagToTeleport_teleport-to-location-2=Teleport to saved location 2
@@ -15,3 +16,6 @@ TagToTeleport_teleport-to-location-6=Teleport to saved location 6
 TagToTeleport_teleport-to-location-7=Teleport to saved location 7
 TagToTeleport_teleport-to-location-8=Teleport to saved location 8
 TagToTeleport_teleport-to-location-9=Teleport to saved location 9
+
+[controls-description]
+TagToTeleport_teleport-to-previous-location=Teleports the player to the location where they were when they teleported to the saved location
